--- a/layin/package.json
+++ b/layin/package.json
@@ -19,7 +19,8 @@
     "ng:build": "ng build --base-href \"./\"",
     "electron:build": "npx electron-builder build --config electron-builder.yml",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "build": {
     "appId": "com.example.app"
@@ -44,12 +45,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.3",
+    "@angular-eslint/builder": "13.2.1",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/schematics": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
     "@angular/cli": "~13.3.3",
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
     "electron": "^18.0.3",
     "electron-builder": "^23.0.3",
+    "eslint": "^8.12.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
