Refactoring of folders

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,9 @@
             "regexp": "bundle generation complete"
           }
         }
+      },
+      "options": {
+        "cwd": "${workspaceFolder}/layin"
       }
     },
     {
