--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,10 +3,24 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Debug Main Process",
+      "port": 9229,
+      "type": "node",
+      "request": "attach",
+      "cwd": "${workspaceFolder}/layin/dist/out-tsc",
+      "runtimeExecutable": "${workspaceFolder}/layin/node_modules/.bin/electron",
+      "windows": {
+        "runtimeExecutable": "${workspaceFolder}/layin/node_modules/.bin/electron.cmd"
+      },
+      "args" : ["."],
+      "outputCapture": "std"
+    },
+    {
       "name": "ng serve",
       "type": "pwa-chrome",
       "request": "launch",
-      "preLaunchTask": "npm: start",
+      "preLaunchTask": "yarn: start",
+      "webRoot": "${workspaceFolder}/layin",
       "url": "http://localhost:4200/"
     },
     {
