Added flare with some try logic

--- a/flare/tsconfig.json
+++ b/flare/tsconfig.json
@@ -8,7 +8,7 @@
     "baseUrl": "./",
     "outDir": "./dist/",
     "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "strict": false,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
