--- a/flare/package.json
+++ b/flare/package.json
@@ -14,6 +14,8 @@
   },
   "private": true,
   "dependencies": {
-    "typescript": "^4.6.3"
+    "@types/node": "^17.0.24",
+    "typescript": "^4.6.3",
+    "x11": "^2.3.0"
   }
 }
